# cloner

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
cloner/: cli.py  core.py
tests/: test_config.py  test_core.py  test_hooks.py
