[project]
name = "cloner"
version = "0.1.0"
description = "Clone git repos to a structured workspace directory"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
clone = "cloner.cli:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pre-commit>=3.0.0",
    "pytest>=8.0.0",
    "ruff>=0.1.0",
]
